--- a/styles.css
+++ b/styles.css
@@ -194,6 +194,9 @@ header nav a:hover {
 .newsletter input {
     padding: 10px;
     width: 250px;
+    border: none;
+    border-radius: 5px;
+    margin-right: 10px;
 }
 
 .newsletter .btn {
